--- a/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,6 +171,7 @@ InputAction=
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Weapon_Base_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
@@ -212,11 +213,10 @@ ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Maps
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter.BP_ArmsCharacter
-OpenAssetsAtExit=/Game/Arms/Arms_Comp.Arms_Comp
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -227,9 +227,9 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Arms/Arms_Comp
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem1=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/Arms/Arms_Comp
 MRUItem3=/Game/ThirdPerson/Input/IMC_Default
 MRUItem4=/Game/ThirdPerson/Input/Actions/IA_FireSecondary
 MRUItem5=/Game/ThirdPerson/Input/Actions/IA_FirePrimary
@@ -476,6 +476,7 @@ K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
+SpringArmComponent="\"Object\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
