Getting primary arms to kinda work with secondary arms

--- a/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=156)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -133,6 +133,7 @@ LastExecutedLaunchName=DESKTOP-C0LD433
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=156)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -216,9 +217,12 @@ Weapon_Base_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
+PropertyWrapper=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+WeaponSpawner_Base_C=
+K2Node_VariableGet=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Characters
+ContentBrowserDrawer.SelectedPaths=/Game/Weapons
 ContentBrowserDrawer.PluginFilters=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -243,17 +247,22 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
-ContentBrowserDrawer.JumpMRU=/All/Game/Arms/Meshes
+ContentBrowserDrawer.JumpMRU=/All/Game/Weapons
+ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/Arms
+ContentBrowserDrawer.JumpMRU=/All/Game/Interactable
+ContentBrowserDrawer.JumpMRU=/All/Game/Enemies
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Input
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Input/Actions
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Characters
+ContentBrowserDrawer.JumpMRU=/All/Game/Effects
+ContentBrowserDrawer.JumpMRU=/All/Game/Arms/Meshes
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Input/Actions
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
 ContentBrowserDrawer.JumpMRU=/All
-ContentBrowserDrawer.JumpMRU=/All/Game/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Maps
 SequenceBrowser.ThumbnailSize=2
 SequenceBrowser.CurrentViewType=2
@@ -291,8 +300,20 @@ CleanShutdown=False
 DebuggerAttached=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter.BP_ArmsCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-RecentAssetEditors=SkeletonEditor
+OpenAssetsAtExit=/Game/Arms/Arms_Comp.Arms_Comp
+OpenAssetsAtExit=/Game/Arms/Arm_Base.Arm_Base
+OpenAssetsAtExit=/Game/Weapons/Weapon_Base.Weapon_Base
+OpenAssetsAtExit=/Game/Weapons/DT_WeaponStats.DT_WeaponStats
+OpenAssetsAtExit=/Game/Weapons/Projectile_Base.Projectile_Base
+OpenAssetsAtExit=/Game/Interactable/WeaponSpawner_Base.WeaponSpawner_Base
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -303,16 +324,22 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/PlayerArmsTest_Skeleton
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter
-MRUItem3=/Game/Arms/Arms_Comp
-MRUItem4=/Game/ThirdPerson/Input/IMC_Default
-MRUItem5=/Game/ThirdPerson/Input/Actions/IA_FireSecondary
-MRUItem6=/Game/ThirdPerson/Input/Actions/IA_FirePrimary
-MRUItem7=/Game/ThirdPerson/Input/Actions/IA_SwapSides
-MRUItem8=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem9=/Game/ThirdPerson/Input/Actions/IA_Move
+MRUItem0=/Game/Interactable/WeaponSpawner_Base
+MRUItem1=/Game/Weapons/Projectile_Base
+MRUItem2=/Game/Weapons/WeaponDrop_Base
+MRUItem3=/Game/Weapons/DT_WeaponStats
+MRUItem4=/Game/Weapons/Weapon_Base
+MRUItem5=/Game/Arms/Arm_Base
+MRUItem6=/Game/Arms/Arms_Comp
+MRUItem7=/Game/Characters/PlayerArmsTest_Skeleton
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter
+MRUItem10=/Game/ThirdPerson/Input/IMC_Default
+MRUItem11=/Game/ThirdPerson/Input/Actions/IA_FireSecondary
+MRUItem12=/Game/ThirdPerson/Input/Actions/IA_FirePrimary
+MRUItem13=/Game/ThirdPerson/Input/Actions/IA_SwapSides
+MRUItem14=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem15=/Game/ThirdPerson/Input/Actions/IA_Move
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -583,6 +610,74 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+Arms_Comp_C.Sockets=True
+Arms_Comp_C.Events=True
+Arm_Base_C.Default=True
+Arm_Base_C.Tick=True
+Arm_Base_C.Replication=True
+Arm_Base_C.Rendering=True
+Arm_Base_C.Collision=True
+Arm_Base_C.Actor=True
+Arm_Base_C.Input=True
+Arm_Base_C.HLOD=True
+Arm_Base_C.Physics=True
+Arm_Base_C.Events=True
+ChildActorComponent.Variable=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.Sockets=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.ComponentTick=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Cooking=True
+ChildActorComponent.Events=True
+WeaponDrop_Base_C.Actor=True
+WeaponDrop_Base_C.Input=True
+WeaponDrop_Base_C.Networking=True
+WeaponDrop_Base_C.Physics=True
+WeaponDrop_Base_C.HLOD=True
+WeaponDrop_Base_C.Collision=True
+WeaponDrop_Base_C.Replication=True
+WeaponDrop_Base_C.Rendering=True
+WeaponDrop_Base_C.Default=True
+WeaponDrop_Base_C.TransformCommon=True
+WorldDataLayers.Networking=True
+WeaponSpawner_Base_C.Default=True
+WeaponSpawner_Base_C.Tick=True
+WeaponSpawner_Base_C.Replication=True
+WeaponSpawner_Base_C.Rendering=True
+WeaponSpawner_Base_C.Collision=True
+WeaponSpawner_Base_C.Actor=True
+WeaponSpawner_Base_C.Input=True
+WeaponSpawner_Base_C.HLOD=True
+WeaponSpawner_Base_C.Physics=True
+WeaponSpawner_Base_C.Events=True
+WeaponSpawner_Base_C.TransformCommon=True
+WeaponSpawner_Base_C.Networking=True
+Weapon_Base_C.ComponentTick=True
+Weapon_Base_C.Default=True
+Weapon_Base_C.Tags=True
+Weapon_Base_C.ComponentReplication=True
+Weapon_Base_C.Activation=True
+Weapon_Base_C.Variable=True
+Weapon_Base_C.Cooking=True
+Weapon_Info.None=True
+WeaponDrop_Base_C.Tick=True
+WeaponDrop_Base_C.Events=True
+Projectile_Base_C.Default=True
+Projectile_Base_C.Tick=True
+Projectile_Base_C.Replication=True
+Projectile_Base_C.Rendering=True
+Projectile_Base_C.Collision=True
+Projectile_Base_C.Actor=True
+Projectile_Base_C.Input=True
+Projectile_Base_C.HLOD=True
+Projectile_Base_C.Physics=True
+Projectile_Base_C.Events=True
+DataTable.DataTable=True
+DataTable.ImportOptions=True
+DataTable.File Path=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/Actions/IA_Move.IA_Move=0
@@ -595,6 +690,8 @@ SceneComponent.Events=True
 /Game/ThirdPerson/Blueprints/BP_ArmsCharacter.BP_ArmsCharacter=0
 /Game/Arms/Arms_Comp.Arms_Comp=0
 /Game/Characters/PlayerArmsTest_Skeleton.PlayerArmsTest_Skeleton=1
+/Game/Interactable/WeaponSpawner_Base.WeaponSpawner_Base=0
+/Game/Weapons/WeaponDrop_Base.WeaponDrop_Base=0
 
 [DetailPropertyExpansion]
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" \"Object.Mappings.Mappings.Mappings[16]\" "
@@ -630,6 +727,10 @@ LODInfoUILayout="\"Object\" "
 SkeletalMeshSocket="\"Object\" "
 BoneProxy="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
+ChildActorComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
+WeaponDrop_Base_C=
+DataTable="\"Object\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -667,8 +768,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2139,4 +2240,25 @@ Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+
+[ColorThemes]
+Theme0=New Theme
+Theme0Color0=(R=0.000000,G=0.000000,B=0.150000,A=0.500000)
+Theme0Label0=
+Theme0Color1=(R=312.709412,G=0.921448,B=0.150000,A=0.500000)
+Theme0Label1=
+Theme0Color2=(R=28.217348,G=0.969366,B=0.150000,A=0.500000)
+Theme0Label2=
+Theme0Color3=(R=108.434959,G=0.988212,B=0.150000,A=0.500000)
+Theme0Label3=
+Theme0Color4=(R=180.629593,G=0.947974,B=0.150000,A=0.500000)
+Theme0Label4=
+Theme0Color5=(R=239.287140,G=1.000000,B=0.150000,A=0.500000)
+Theme0Label5=
+Theme0Color6=(R=0.516164,G=1.000000,B=0.150000,A=0.500000)
+Theme0Label6=
+
+[PlacementMode]
+RecentlyPlaced=/Game/Interactable/WeaponSpawner_Base.WeaponSpawner_Base;
+RecentlyPlaced=/Game/Weapons/WeaponDrop_Base.WeaponDrop_Base;
 
