Fixing arm rotation and weapon firing. Also added weapons with multishot

--- a/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -213,13 +213,18 @@ AnimationCurveGroupingDelimiters="._/|\\"
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_FireSecondary.IA_FireSecondary,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_FirePrimary.IA_FirePrimary
 InputAction=
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties
-Weapon_Base_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Weapon_Base_C=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 PropertyWrapper=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WeaponSpawner_Base_C=
 K2Node_VariableGet=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+SetArmTargetPoints=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+SetArmTargetPoints_1=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_ArmsCharacter_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Projectile_Base_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+SphereComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game/Weapons
@@ -298,24 +303,28 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter.BP_ArmsCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Arms/Arms_Comp.Arms_Comp
+OpenAssetsAtExit=/Game/Weapons/WeaponDrop_Base.WeaponDrop_Base
+OpenAssetsAtExit=/Game/Interactable/WeaponSpawner_Base.WeaponSpawner_Base
+OpenAssetsAtExit=/Game/Characters/PlayerArmsTest.PlayerArmsTest
+OpenAssetsAtExit=/Game/Arms/Meshes/PH_ArmAnimBP.PH_ArmAnimBP
 OpenAssetsAtExit=/Game/Arms/Arm_Base.Arm_Base
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter.BP_ArmsCharacter
 OpenAssetsAtExit=/Game/Weapons/Weapon_Base.Weapon_Base
+OpenAssetsAtExit=/Game/Arms/Arms_Comp.Arms_Comp
 OpenAssetsAtExit=/Game/Weapons/DT_WeaponStats.DT_WeaponStats
 OpenAssetsAtExit=/Game/Weapons/Projectile_Base.Projectile_Base
-OpenAssetsAtExit=/Game/Interactable/WeaponSpawner_Base.WeaponSpawner_Base
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -324,22 +333,24 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Interactable/WeaponSpawner_Base
+MRUItem0=/Game/Blueprints/BPI_TeamInterface
 MRUItem1=/Game/Weapons/Projectile_Base
-MRUItem2=/Game/Weapons/WeaponDrop_Base
-MRUItem3=/Game/Weapons/DT_WeaponStats
+MRUItem2=/Game/Weapons/DT_WeaponStats
+MRUItem3=/Game/Interactable/WeaponSpawner_Base
 MRUItem4=/Game/Weapons/Weapon_Base
-MRUItem5=/Game/Arms/Arm_Base
-MRUItem6=/Game/Arms/Arms_Comp
-MRUItem7=/Game/Characters/PlayerArmsTest_Skeleton
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter
-MRUItem10=/Game/ThirdPerson/Input/IMC_Default
-MRUItem11=/Game/ThirdPerson/Input/Actions/IA_FireSecondary
-MRUItem12=/Game/ThirdPerson/Input/Actions/IA_FirePrimary
-MRUItem13=/Game/ThirdPerson/Input/Actions/IA_SwapSides
-MRUItem14=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem15=/Game/ThirdPerson/Input/Actions/IA_Move
+MRUItem5=/Game/Weapons/WeaponDrop_Base
+MRUItem6=/Game/Characters/PlayerArmsTest
+MRUItem7=/Game/Arms/Meshes/PH_ArmAnimBP
+MRUItem8=/Game/Arms/Arm_Base
+MRUItem9=/Game/Arms/Arms_Comp
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter
+MRUItem11=/Game/Characters/PlayerArmsTest_Skeleton
+MRUItem12=/Game/ThirdPerson/Input/IMC_Default
+MRUItem13=/Game/ThirdPerson/Input/Actions/IA_FireSecondary
+MRUItem14=/Game/ThirdPerson/Input/Actions/IA_FirePrimary
+MRUItem15=/Game/ThirdPerson/Input/Actions/IA_SwapSides
+MRUItem16=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem17=/Game/ThirdPerson/Input/Actions/IA_Move
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -678,6 +689,65 @@ Projectile_Base_C.Events=True
 DataTable.DataTable=True
 DataTable.ImportOptions=True
 DataTable.File Path=True
+PH_ArmAnimBP_C.Default=True
+PH_ArmAnimBP_C.RootMotion=True
+PH_ArmAnimBP_C.Notifies=True
+PH_ArmAnimBP_C.Montage=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
+K2Node_Message.Graph=True
+PropertyWrapper.Events=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Navigation=True
+ProjectileMovementComponent.ProjectileSimulation=False
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Mesh Painting=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/Actions/IA_Move.IA_Move=0
@@ -692,6 +762,11 @@ DataTable.File Path=True
 /Game/Characters/PlayerArmsTest_Skeleton.PlayerArmsTest_Skeleton=1
 /Game/Interactable/WeaponSpawner_Base.WeaponSpawner_Base=0
 /Game/Weapons/WeaponDrop_Base.WeaponDrop_Base=0
+/Game/Weapons/Projectile_Base.Projectile_Base=0
+/Game/Arms/Arm_Base.Arm_Base=0
+/Game/Weapons/Weapon_Base.Weapon_Base=0
+/Game/Weapons/DT_WeaponStats.DT_WeaponStats=0
+/Game/Blueprints/BPI_TeamInterface.BPI_TeamInterface=0
 
 [DetailPropertyExpansion]
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" \"Object.Mappings.Mappings.Mappings[16]\" "
@@ -701,8 +776,8 @@ WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -728,9 +803,17 @@ SkeletalMeshSocket="\"Object\" "
 BoneProxy="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 ChildActorComponent="\"Object\" "
-StaticMeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 WeaponDrop_Base_C=
 DataTable="\"Object\" "
+PH_ArmAnimBP_C="\"Object\" "
+AnimInstance="\"Object\" "
+SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+Blueprint="\"Object\" "
+BlueprintCore="\"Object\" "
+ProjectileMovementComponent="\"Object\" "
+MovementComponent="\"Object\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
