Weapon dropping from hands

--- a/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -220,20 +220,20 @@ Weapon_Base_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
-PropertyWrapper=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+PropertyWrapper=K2Node_BreakStruct.PinOptions.ShowPinForProperties,TestEnemyM_C.Physics.ConstraintsGroup
 WeaponSpawner_Base_C=
-K2Node_VariableGet=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_VariableGet=K2Node_BreakStruct.PinOptions.ShowPinForProperties,TestEnemyM_C.Physics.ConstraintsGroup
 SetArmTargetPoints=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 SetArmTargetPoints_1=K2Node_BreakStruct.PinOptions.ShowPinForProperties
-BP_ArmsCharacter_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_ArmsCharacter_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,TestEnemyM_C.Physics.ConstraintsGroup
 Projectile_Base_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 SphereComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties
-SkeletalMeshComponent=TestEnemyM_C.Physics.ConstraintsGroup
+SkeletalMeshComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,TestEnemyM_C.Physics.ConstraintsGroup
 CameraComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Arm_Base_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 HandleWeaponTransfer=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 HandleWeaponTransfer_7=K2Node_BreakStruct.PinOptions.ShowPinForProperties
-K2Node_VariableSet=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_VariableSet=K2Node_BreakStruct.PinOptions.ShowPinForProperties,TestEnemyM_C.Physics.ConstraintsGroup
 K2Node_Variable=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 CapsuleComponent=
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
@@ -385,7 +385,7 @@ TestEnemyM_C=TestEnemyM_C.Physics.ConstraintsGroup
 BP_HealthComp_C=TestEnemyM_C.Physics.ConstraintsGroup
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Weapons
 ContentBrowserDrawer.PluginFilters=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -410,13 +410,13 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Enemies
-ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/Weapons
+ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Interactable
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
@@ -476,6 +476,10 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -487,10 +491,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -510,31 +511,35 @@ OpenAssetsAtExit=/Game/Enemies/TestEnemyM.TestEnemyM
 OpenAssetsAtExit=/Game/Enemies/TestEnemyR.TestEnemyR
 OpenAssetsAtExit=/Game/Enemies/EnemyPawn_Base.EnemyPawn_Base
 OpenAssetsAtExit=/Game/Blueprints/BP_HealthComp.BP_HealthComp
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter.BP_ArmsCharacter
+OpenAssetsAtExit=/Game/Arms/Arm_Base.Arm_Base
+OpenAssetsAtExit=/Game/Weapons/Weapon_Base.Weapon_Base
+OpenAssetsAtExit=/Game/Weapons/WeaponDrop_Base.WeaponDrop_Base
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BP_HealthComp
-MRUItem1=/Game/Enemies/EnemyPawn_Base
-MRUItem2=/Game/Enemies/TestEnemyR
-MRUItem3=/Game/Enemies/TestEnemyM
-MRUItem4=/Game/Weapons/DT_WeaponStats
-MRUItem5=/Game/Interactable/Drop_Base
-MRUItem6=/Game/Enemies/EnemyWaveController
-MRUItem7=/Game/Interactable/Coin_Drop
-MRUItem8=/Game/Blueprints/PS_ArmsPlayerState
-MRUItem9=/Game/Meshes/CoinMesh
-MRUItem10=/Game/Arms/Meshes/PH_ArmAnimBP
-MRUItem11=/Game/Arms/Arms_Comp
-MRUItem12=/Game/ThirdPerson/Input/Actions/IA_Inventory
-MRUItem13=/Game/ThirdPerson/Input/Actions/IA_SwapSides
-MRUItem14=/Game/ThirdPerson/Input/IMC_Default
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter
-MRUItem16=/Game/Arms/Arm_Base
-MRUItem17=/Game/Arms/Meshes/PH_Arm
-MRUItem18=/Game/Blueprints/BPI_TeamInterface
-MRUItem19=/Game/Weapons/Projectile_Base
-MRUItem20=/Game/Interactable/WeaponSpawner_Base
-MRUItem21=/Game/Weapons/Weapon_Base
-MRUItem22=/Game/Weapons/WeaponDrop_Base
+MRUItem0=/Game/Weapons/WeaponDrop_Base
+MRUItem1=/Game/Weapons/Weapon_Base
+MRUItem2=/Game/Arms/Arm_Base
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ArmsCharacter
+MRUItem4=/Game/Blueprints/BP_HealthComp
+MRUItem5=/Game/Enemies/EnemyPawn_Base
+MRUItem6=/Game/Enemies/TestEnemyR
+MRUItem7=/Game/Enemies/TestEnemyM
+MRUItem8=/Game/Weapons/DT_WeaponStats
+MRUItem9=/Game/Interactable/Drop_Base
+MRUItem10=/Game/Enemies/EnemyWaveController
+MRUItem11=/Game/Interactable/Coin_Drop
+MRUItem12=/Game/Blueprints/PS_ArmsPlayerState
+MRUItem13=/Game/Meshes/CoinMesh
+MRUItem14=/Game/Arms/Meshes/PH_ArmAnimBP
+MRUItem15=/Game/Arms/Arms_Comp
+MRUItem16=/Game/ThirdPerson/Input/Actions/IA_Inventory
+MRUItem17=/Game/ThirdPerson/Input/Actions/IA_SwapSides
+MRUItem18=/Game/ThirdPerson/Input/IMC_Default
+MRUItem19=/Game/Arms/Meshes/PH_Arm
+MRUItem20=/Game/Blueprints/BPI_TeamInterface
+MRUItem21=/Game/Weapons/Projectile_Base
+MRUItem22=/Game/Interactable/WeaponSpawner_Base
 MRUItem23=/Game/Characters/PlayerArmsTest
 MRUItem24=/Game/Characters/PlayerArmsTest_Skeleton
 MRUItem25=/Game/ThirdPerson/Input/Actions/IA_FireSecondary
@@ -1832,9 +1837,9 @@ RecastNavMesh="\"Object\" \"Object.Generation.NavMeshResolutionParams\" \"Object
 NavigationData="\"Object\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" \"Object.Generation.NavLinkJumpDownConfig\" "
 InputModifierSmoothDelta="\"Object\" "
 InputModifierDeadZone="\"Object\" "
-BP_ArmsCharacter_C="\"Object.Actor.Tags\" "
-Character="\"Object\" \"Object.Actor.Tags\" "
-Pawn="\"Object\" \"Object.Actor.Tags\" "
+BP_ArmsCharacter_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 StaticMesh="\"Object\" "
 EnemyPawn_Base_C="\"Object\" \"Object.Actor.Tags\" "
 TestEnemyM_C="\"Object\" \"Object.Actor.Tags\" "
