Fixing projectile collisions

--- a/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectArmsGJ/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -222,7 +222,7 @@ WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,World
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 PropertyWrapper=K2Node_BreakStruct.PinOptions.ShowPinForProperties,TestEnemyM_C.Physics.ConstraintsGroup
 WeaponSpawner_Base_C=
-K2Node_VariableGet=K2Node_BreakStruct.PinOptions.ShowPinForProperties,TestEnemyM_C.Physics.ConstraintsGroup
+K2Node_VariableGet=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 SetArmTargetPoints=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 SetArmTargetPoints_1=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BP_ArmsCharacter_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,TestEnemyM_C.Physics.ConstraintsGroup
@@ -385,7 +385,7 @@ TestEnemyM_C=TestEnemyM_C.Physics.ConstraintsGroup
 BP_HealthComp_C=TestEnemyM_C.Physics.ConstraintsGroup
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Weapons
+ContentBrowserDrawer.SelectedPaths=/Game/Interactable
 ContentBrowserDrawer.PluginFilters=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -1606,6 +1606,20 @@ TestEnemyM_C.TextureStreaming=True
 TestEnemyM_C.LevelInstance=True
 TestEnemyM_C.WorldPartition=True
 TestEnemyM_C.DataLayers=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/Actions/IA_Move.IA_Move=0
@@ -1641,9 +1655,9 @@ DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 Object="\"Object\" "
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -1670,7 +1684,7 @@ SkeletalMeshSocket="\"Object\" "
 BoneProxy="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 ChildActorComponent="\"Object\" "
-StaticMeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 WeaponDrop_Base_C=
 DataTable="\"Object\" "
 PH_ArmAnimBP_C="\"Object\" "
@@ -1838,8 +1852,8 @@ NavigationData="\"Object\" \"Object.Generation.NavMeshResolutionParams\" \"Objec
 InputModifierSmoothDelta="\"Object\" "
 InputModifierDeadZone="\"Object\" "
 BP_ArmsCharacter_C="\"Object\" "
-Character="\"Object\" "
-Pawn="\"Object\" "
+Character="\"Object\" \"Object.Actor.Tags\" "
+Pawn="\"Object\" \"Object.Actor.Tags\" "
 StaticMesh="\"Object\" "
 EnemyPawn_Base_C="\"Object\" \"Object.Actor.Tags\" "
 TestEnemyM_C="\"Object\" \"Object.Actor.Tags\" "
