--- a/ProjectArmsGJ/Config/DefaultGame.ini
+++ b/ProjectArmsGJ/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7C938D194D70D22135036CA1A46AD113
-ProjectName=Third Person BP Game Template
+ProjectName=Project Arms
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +8,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
