--- a/ProjectArmsGJ/Config/DefaultEngine.ini
+++ b/ProjectArmsGJ/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ProjectArmsGJ
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/ThirdPerson/Maps/ArenaLevel.ArenaLevel
+GameDefaultMap=/Game/ThirdPerson/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
